--- a/_config.yml
+++ b/_config.yml
@@ -72,3 +72,10 @@ deploy:
   repo: https://github.com/rgfindl/rgfindl.github.io
   branch: master
   message: "Site updated: {{ now('YYYY-MM-DD HH:mm:ss') }})"
+
+feed:
+  type: atom
+  path: atom.xml
+  limit: 20
+  hub:
+  content:
